[exo] Set the render pass output rect to a consistent size

The render pass output rectangle needs to be set to a consistent size
that does not change unless the window size also changes.

The prior process involved computing the pixel size output rectangle
affected by each exo surface, and taking the union of all those to get
the render pass output rect.

The window size however is computed by taking the union of the
rectangles in device-independent pixels, and only converting the size of
the resulting rectangle to device pixels at the end.

Rectangle conversions are done to bound the floating-point
intermediates. Size conversions always round down. And with some
interesting device scale factors like "1.6" the intermediate floating
point values did not have a nice conversion from integer values.

This patch alters how the render pass output rectangle is computed so
that a consistent value is calculated.

If the window size does change, then a new surface will be allocated,
and a new surface will be allocated for the new size.

Bug: 846169
Change-Id: I05b5dff53b7c5c050150571b5334b06c8de2ee32
Reviewed-on: https://chromium-review.googlesource.com/1071118
Commit-Queue: Lloyd Pique <lpique@chromium.org>
Reviewed-by: David Reveman <reveman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562068}
Former-commit-id: 070e165a53f1abcb2bd3eeac2d89bdb4c0870049