components/exo/surface_tree_host.cc
@@ -287,10 +287,22 @@ void SurfaceTreeHost::SubmitCompositorFrame() {
   frame.render_pass_list.push_back(viz::RenderPass::Create());
   const std::unique_ptr<viz::RenderPass>& render_pass =
       frame.render_pass_list.back();
+
   const int kRenderPassId = 1;
-  render_pass->SetNew(kRenderPassId, gfx::Rect(), gfx::Rect(),
-                      gfx::Transform());
-  float device_scale_factor = host_window()->layer()->device_scale_factor();
+  // Compute a temporaly stable (across frames) size for the render pass output
+  // rectangle that is consistent with the window size. It is used to set the
+  // size of the output surface. Note that computing the actual coverage while
+  // building up the render pass can lead to the size being one pixel too large,
+  // especially if the device scale factor has a floating point representation
+  // that requires many bits of precision in the mantissa, due to the coverage
+  // computing an "enclosing" pixel rectangle. This isn't a problem for the
+  // dirty rectangle, so it is updated as part of filling in the render pass.
+  const float device_scale_factor =
+      host_window()->layer()->device_scale_factor();
+  const gfx::Size output_surface_size_in_pixels = gfx::ConvertSizeToPixel(
+      device_scale_factor, host_window_->bounds().size());
+  render_pass->SetNew(kRenderPassId, gfx::Rect(output_surface_size_in_pixels),
+                      gfx::Rect(), gfx::Transform());
   frame.metadata.device_scale_factor = device_scale_factor;
   root_surface_->AppendSurfaceHierarchyContentsToFrame(
       root_surface_origin_, device_scale_factor,
